# newline_iwb_converter

./: .gitignore  README.md  benchmark.iwb  pyproject.toml
.github/workflows/: build-executables.yml
scripts/: build_exec.py
src/newline_iwb_converter/: __init__.py  iwb2pdf.py  iwb2svg.py
src/newline_iwb_converter/pdf_engines/: __init__.py  base.py  inkscape_engine.py  svglib_engine.py
