[project]
name = "newline-iwb-converter"
version = "0.2.1"
description = "A converter utility for handling Newline whiteboard IWB files and converting them"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  {name = "Matteo Gheza", email = "me@matteogheza.it"}
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",

  "Topic :: Education",
  "Topic :: File Formats",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = [
    "reportlab>=4.0",
    "svglib>=1.4",
]

[project.urls]
Homepage = "https://github.com/matteogheza/newline-iwb-converter"
Documentation = "https://github.com/matteogheza/newline-iwb-converter?tab=readme-ov-file#usage"
Repository = "https://github.com/matteogheza/newline-iwb-converter.git"
Issues = "https://github.com/matteogheza/newline-iwb-converter/issues"

[project.scripts]
iwb2svg = "newline_iwb_converter.iwb2svg:main"
iwb2pdf = "newline_iwb_converter.iwb2pdf:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = ["pyinstaller>=6.0"]
